--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,11 @@ textarea{
 }
 .modal__win{
     margin: 0 auto;
-    position: relative;
+    z-index: 1;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 792px;
     height: 613px;
     background: #F2F0F9;
@@ -205,4 +209,37 @@ textarea{
 .summ__price-value{
     font-weight: 700;
     color: #6D5BD0;
+}
+
+.win__error{
+    display: none;
+    margin: 0 auto;
+    z-index: 2;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 350px;
+    height: 350px;
+    background: #F2F0F9;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+}
+
+.win__error-img{
+    margin: 0 auto;
+    margin-top: 61px;
+    margin-bottom: 33px;
+    width: 90px;
+    height: 90px;
+    background-image: url("../img/error.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.win__error-text{
+    text-align: center;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
 }
