--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,11 @@
 }
 
 h2{
-    margin-left: 106px;
     font-weight: 700;
     font-size: 24px;
     line-height: 29px;
     text-transform: uppercase;
     letter-spacing: 0.1em;
-    margin-bottom: 21px;
 }
 
 form{
@@ -54,11 +52,14 @@ textarea{
 }
 .modal__win{
     margin: 0 auto;
-    position: relative;
+    position: fixed;
     width: 792px;
-    height: 613px;
+    top: 5%;
+    left: calc(50% - 396px);
     background: #F2F0F9;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+    padding-bottom: 50px;
+    z-index: 11;
 }
 
 .modal__win-form{
@@ -120,7 +121,7 @@ textarea{
 
 .discont div input[type="text"]{
     width: 200px;
-    
+
 }
 .description{
     grid-column: 2;
@@ -135,6 +136,29 @@ textarea{
     grid-column: 2;
     grid-row: 4;
 }
+.error{
+  display: none;
+  grid-column: 1;
+  grid-row: 5;
+  align-self: flex-end;
+}
+.product__img{
+  display: none;
+  grid-column: 1 / span 2;
+  grid-row: 6;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+.error p{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #D80101;
+}
+
 .modal__win-form input[type="button"]{
     background: #6D5BD0;
     border-radius: 6px;
@@ -205,4 +229,62 @@ textarea{
 .summ__price-value{
     font-weight: 700;
     color: #6D5BD0;
+}
+
+.win__error{
+  display: block;
+  margin: 0 auto;
+  background-color: #F2F0F9;
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  left: calc(50% - 175px);
+  top: 132px;
+  text-align: center;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+  z-index: 12;
+}
+.error__img{
+  margin-bottom: 33px;
+  margin-top: 63px;
+  }
+.error__maessage{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #6E6893;
+}
+.edit__product{
+  display: none;
+}
+.edit__info{
+  display: none;
+  gap: 16px;
+
+}
+.edit__info img{
+  width: 12px;
+}
+.header__win{
+  width: 580px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 21px;
+}
+.add__product, .edit__product{
+text-align: left;
+}
+.product__id{
+font-style: normal;
+font-weight: 600;
+font-size: 10px;
+line-height: 12px;
+text-transform: uppercase;
+color: #C5C5C5;
 }
