--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ textarea{
 }
 
 .win__error{
-  display: block;
+  display: none;
   margin: 0 auto;
   background-color: #F2F0F9;
   position: absolute;
